--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo library use</string>
+	<key>NSCameraUsageDescription</key>
+    <string>Camera usage permission</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Microphone library usage</string>
 </dict>
 </plist>
