--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   cloud_firestore: ^5.4.1
   firebase_auth: ^5.2.1
   firebase_storage: ^12.3.0
+  flutter_svg: ^2.0.10+1
+  image_picker: ^1.1.2
+
+
 
 dev_dependencies:
   flutter_test:
@@ -38,9 +42,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+#    - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
