--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   firebase_storage: ^12.3.0
   flutter_svg: ^2.0.10+1
   image_picker: ^1.1.2
+  provider: ^6.1.2
+  uuid: ^4.5.0
+  intl: ^0.19.0
 
 
 
